overflow bug fixing

--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
     background: linear-gradient(180deg, #010208 16.39%, #010206 20.51%, #040008 24.79%, #010101 30.46%, #010101 34.11%, #010101 36.21%, #010101 100%);
     color: white;
     font-family: 'Poppins', sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    overflow-x: hidden;
 }
 
 h2 {
@@ -66,24 +65,25 @@ header {
 header::before {
     content: '';
     position: absolute;
-    background-image: radial-gradient(circle, #2B0540, #010208, #010208);
-    height: 90vh;
+    background-image: radial-gradient(circle, #2B0540, transparent, transparent);
+    height: 80vh;
     width: 80vw;
+    display: block;
     z-index: -1;
-    top: -220%;
-    left: -5%;
+    transform: translate(-10%, -50%);
     border-radius: 50%;
 }
 
 header::after {
     content: '';
     position: absolute;
-    background-image: radial-gradient(circle, #2B0540, #010208, #010208);
+    background-image: radial-gradient(circle, #2B0540, transparent, transparent);
     height: 100vh;
     width: 50vw;
+    display: block;
     z-index: -1;
     top: 0%;
-    right: -10%;
+    transform: translate(150%, 0%);
     border-radius: 50%;
 }
 
@@ -249,12 +249,12 @@ nav h3 {
 .about::before {
     content: '';
     position: absolute;
-    background-image: radial-gradient(circle, #2B0540, #010208, #010208);
+    background-image: radial-gradient(circle, #2B0540, transparent, transparent);
     height: 100vh;
-    width: 50vw;
+    width: 60vw;
+    display: block;
     z-index: -1;
-    top: -10%;
-    left: -20%;
+    transform: translate(-50%, -20%);
     border-radius: 50%;
 }
 
@@ -283,13 +283,11 @@ nav h3 {
 
 .meta-work::before {
     content: '';
-    position: absolute;
-    background-image: radial-gradient(circle, #2B0540, #010208, #010208);
+    background-image: radial-gradient(circle, #2B0540, transparent, transparent);
     height: 150vh;
     width: 75vw;
     z-index: -1;
-    top: -5%;
-    right: -20%;
+    transform: translate(0%, -30%);
     border-radius: 50%;
 }
 
@@ -359,30 +357,26 @@ nav h3 {
 
 .activity {
     padding: 1rem 0 2.3rem clamp(1rem, 8.3vw, 20rem);
-    position: relative;
 }
 
 .activity::before {
     content: '';
     position: absolute;
-    background-image: radial-gradient(circle, #2B0540, #010208, #010208);
-    height: 150vh;
+    background-image: radial-gradient(circle, #2B0540, transparent, transparent);
+    height: 100vh;
     width: 75vw;
     z-index: -1;
-    top: -20%;
-    left: -40%;
+    transform: translate(-60%, -20%);
     border-radius: 50%;
 }
 
 .activity::after {
     content: '';
-    position: absolute;
-    background-image: radial-gradient(circle, #2B0540, #010208, #010208);
+    background-image: radial-gradient(circle, #2B0540, transparent, transparent);
     height: 150vh;
     width: 75vw;
     z-index: -1;
-    top: 0%;
-    right: -20%;
+    transform: translate(60%, -70%);
     border-radius: 50%;
 }
 
@@ -629,7 +623,6 @@ footer .contact img {
 
     .activity-types .vid-play h3 {
         position: static;
-
     }
 
     .activity-types .vid-play img {
